tests/expectations/parser/finalize/finalize_fail.out
Error [EPAR0370005]: expected '@', 'struct', 'onchain', 'const', 'fn', 'program', 'script' -- found 'finalize'
    --> test:3:3
     |
   3 | } finalize {
     |   ^^^^^^^^
